--- a/WebApp/Views/Doctor/DoctorTimings.cshtml
+++ b/WebApp/Views/Doctor/DoctorTimings.cshtml
@@ -4,13 +4,11 @@
     Layout = "~/Views/Shared/_DoctorLayout.cshtml";
 }
 
-
 <!-- page content -->
-
 
 <div class="right_col" style="min-height: 1779px;">
     <div class="x_panel">
-        
+
         <div class="x_title">
             <h2>Schedule</h2>
             <ul class="nav navbar-right panel_toolbox">
@@ -58,23 +56,6 @@
 
             <div class="x_panel">
                 <div class="x_title">
-                    
-                    <div class="table-responsive">
-                        <div id="divLoader" style="display:none;" class="loader"></div>
-
-                        <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                            <thead>
-                                <tr class="headings">
-                                    <th class="column-title">Day</th>
-                                    <th class="column-title">From</th>
-                                    <th class="column-title">To </th>
-                                    <th class="column-title">Action</th>
-                                </tr>
-                            </thead>
-                            <tbody id="timingTable"></tbody>
-                        </table>
-                    </div>
-                    ---------------------------------
 
 
                     <h2>Days</h2>
@@ -83,167 +64,48 @@
                     </ul>
                     <div class="clearfix"></div>
                 </div>
-                <div class="x_content" style="display: block;">
-                    <div class="table-responsive">
-                        <h2>Monday</h2>
-                        <table class="table table-striped table-bordered dataTable no-footer">
-                            <tbody>
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
 
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div><!-- monday -->
-
-                    <div class="table-responsive">
-                        <h2>Tuesday</h2>
-                        <table class="table table-striped table-bordered dataTable no-footer">
-                            <tbody>
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div><!-- Tuesday -->
-
-                    <div class="table-responsive">
-                        <h2>Wednesday</h2>
-                        <table class="table table-striped table-bordered dataTable no-footer">
-                            <tbody>
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div><!-- Wednesday -->
-
-                    <div class="table-responsive">
-                        <h2>Thursday</h2>
-                        <table class="table table-striped table-bordered dataTable no-footer">
-                            <tbody>
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div><!-- Thursday -->
-
-                    <div class="table-responsive">
-                        <h2>Friday</h2>
-                        <table class="table table-striped table-bordered dataTable no-footer">
-                            <tbody>
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div><!-- Friday -->
-
-                    <div class="table-responsive">
-                        <h2>Saturday</h2>
-                        <table class="table table-striped table-bordered dataTable no-footer">
-                            <tbody>
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-
-                                <tr class="time_btn">
-                                    <td class="time-remove"><span>8:00am To 9:00am</span> <button class="btn btn-primary" type="button">Delete</button></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div><!-- Saturday -->
-
-                    <div class="table-responsive">
-                        <h2>Sunday</h2>
-                        <p>There is no time Slot available</p>
-                    </div><!-- Sunday -->
+                <div id="divLoader" style="display:none;" class="loader"></div>
+                <div class="x_content" style="display: block;" id="divDayWiseTiming">
                 </div>
-            </div><!-- Days -->
+
+                </div><!-- Days -->
         </div>
     </div>
 </div>
 
-
-
 @section Scripts {
-
     <script type="text/javascript">
         var _objUpdate = null;
         var _objAdd = null;
         var _doctorId = 0;
 
-    $(document).ready(function()
-    {
-        GetTimings();
-     
-
-        $('#DoctorTiming_from').bootstrapMaterialDatePicker
-      ({
-          date: false,
-          shortTime: true,
-          format: 'HH:mm A',
-
-      });
-
-        $('#DoctorTiming_to').bootstrapMaterialDatePicker
-      ({
-          date: false,
-          shortTime: true,
-          format: 'HH:mm A',
-
-      });
+        $(document).ready(function () {
+            GetTimings();
 
 
-      $.material.init()
-    });
+            $('#DoctorTiming_from').bootstrapMaterialDatePicker
+          ({
+              date: false,
+              shortTime: true,
+              format: 'HH:mm A',
+
+          });
+
+            $('#DoctorTiming_to').bootstrapMaterialDatePicker
+          ({
+              date: false,
+              shortTime: true,
+              format: 'HH:mm A',
+
+          });
 
 
-       
+            $.material.init()
+        });
+
+
+
 
         function ValidateForm() {
             var success = "";
@@ -258,7 +120,7 @@
             }
         }
 
-
+        var test;
 
         function GetTimings() {
             $("tbody[id$='timingTable']").html('');
@@ -272,7 +134,9 @@
                 success: function (response) {
                     _objUpdate = response.DoctorTiming;
                     _doctorId = response.DoctorId;
-                    bindTimingsTable(response.DoctorTimingsList);
+                    //bindTimingsTable(response.DoctorTimingsList);
+                    bindTimingsDayWise(response.DayWiseTimings);
+                    test = response.DayWiseTimings;
                 },
                 error: errorRes
 
@@ -296,9 +160,39 @@
             }
             $("div[id$='divLoader']").hide();
             $("tbody[id$='timingTable']").html(tableHtml);
-            
+
 
         }
+
+        function bindTimingsDayWise(daywiseList) {
+            var divHtml ="";
+           
+            for (var i = 0; i < daywiseList.length; i++)
+            {
+                divHtml = divHtml + "<div class='table-responsive'>";
+                divHtml = divHtml + "<h2>" + daywiseList[i].Day + "</h2>";
+                divHtml = divHtml + "<table class='table table-striped table-bordered dataTable no-footer'>";
+                divHtml = divHtml + "<tbody>";
+
+                if (daywiseList[i].Timings.length > 0)
+                {
+                    for (var j = 0; j < daywiseList[i].Timings.length; j++) {
+                        divHtml = divHtml + "<tr class='time_btn'>";
+                        divHtml = divHtml + "<td class='time-remove'><span>" + daywiseList[i].Timings[j].from + " To " + daywiseList[i].Timings[j].to + "</span><button class='btn btn-primary' onclick='deleteObj(" + daywiseList[i].Timings[j].doctorTimingsID + ");' type='button'>Delete</button></td>";
+                        divHtml = divHtml + "</tr>";
+                    }
+                }
+                else
+                {
+                    divHtml = divHtml + "<p>There is no time Slot available</p>";
+                }
+                divHtml = divHtml + "</tbody></table><div>";
+            }
+            $("div[id$='divDayWiseTiming']").html(divHtml);
+            $("div[id$='divLoader']").hide();
+            
+        }
+
 
         function editObj(objTiming) {
             $("#DoctorTiming_day").val(objTiming.day);
@@ -323,15 +217,15 @@
 
         function addUpdate() {
             var msg = ValidateForm();
-            if (msg == "" || msg==undefined) {
+            if (msg == "" || msg == undefined) {
                 fillObj();
 
                 var _data;
                 if (_objUpdate == null) {
-                    _data = _objAdd ;
+                    _data = _objAdd;
                 }
                 else {
-                    _data =_objUpdate ;
+                    _data = _objUpdate;
                 }
                 $("div[id$='divLoader']").show();
                 $.ajax({
@@ -362,18 +256,18 @@
                 return false;
 
             $("div[id$='divLoader']").show();
-                $.ajax({
-                    type: 'POST',
-                    url: '@Url.Action("DeleteDoctorTiming", "Doctor")',
-                    data: { 'id': doctorTimingsID },
-                    dataType: 'json',
-                    success: function () {
-                        GetTimings();
-                    },
-                    error: errorRes
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("DeleteDoctorTiming", "Doctor")',
+                data: { 'id': doctorTimingsID },
+                dataType: 'json',
+                success: function () {
+                    GetTimings();
+                },
+                error: errorRes
 
-                });
-         }
+            });
+        }
 
 
         function fillObj() {
@@ -399,6 +293,4 @@
 
     </script>
 }
-
-
 
